--- a/.github/workflows/skaffold-build.yml
+++ b/.github/workflows/skaffold-build.yml
@@ -15,7 +15,7 @@ on:
       harbor-password:
         required: true
       releases-repo-push-token:
-        required: false
+        required: true
 
 jobs:
   pipeline:
@@ -63,7 +63,7 @@ jobs:
         prerelease: ${{ inputs.build-prerelease }}
 
     - name: Pull the Releases Repository
-      if: ${{ secrets.releases-repo-push-token != '' }}
+      if: secrets.releases-repo-push-token != ''
       uses: actions/checkout@v4
       with:
         repository: ${{ inputs.releases-repo }}
@@ -71,7 +71,7 @@ jobs:
         token: ${{ secrets.releases-repo-push-token }}
 
     - name: Copy the Artifacts
-      if: ${{ secrets.releases-repo-push-token != '' }}
+      if: secrets.releases-repo-push-token != ''
       run: |
         cd releases
         git config user.name "GitHub Actions Bot"
