--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Pull the Releases Repository
       uses: actions/checkout@v4
       with:
-        repository: $${{ inputs.releases-repo }}
+        repository: ${{ inputs.releases-repo }}
         path: de-releases
         token: ${{ secrets.releases-repo-push-token }}
 
