DD-18: added a missing quote

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -66,7 +66,7 @@ jobs:
         git config user.email "<>"
         mkdir -p images
         echo "{\"repository\":\"${REPO_URI}\",\"release\":\"${RELEASE_NAME}\",\"image\":\"${DOCKER_IMAGE\"}" \
-            | jq > images/${REPO_NAME}.json"
+            | jq > "images/${REPO_NAME}.json"
         git add "images/${REPO_NAME}.json"
         git commit -m "updated the image version for ${REPO_NAME}"
         git push
