--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         echo "REPO_NAME=${GITHUB_REPOSITORY/#*\//}" >> "${GITHUB_ENV}"
         echo "REPO_URI=https://github.com/${GITHUB_REPOSITORY}" >> "${GITHUB_ENV}"
+        echo "RELEASE_NAME=${GITHUB_REF_NAME}" >> "${GITHUB_ENV}"
         echo "DOCKER_IMAGE=harbor.cyverse.org/de/${GITHUB_REPOSITORY/#*\//}:${GITHUB_REF_NAME}" >> "${GITHUB_ENV}"
 
     - name: Install Docker Buildx
