--- a/.github/workflows/skaffold-build.yml
+++ b/.github/workflows/skaffold-build.yml
@@ -80,3 +80,10 @@ jobs:
         git add "builds/${REPO_NAME}.json" "services/${REPO_NAME}"
         git commit -m "updated the build artifacts for ${REPO_NAME}"
         git push
+
+    - name: send webhook
+      uses: distributhor/workflow-webhook@v3
+      with:
+        webhook_type: 'json-extended'
+        webhook_url: ${{ secrets.CICD_WEBHOOK_URL }}
+        webhook_secret: ${{ secrets.CICD_WEBHOOK_SECRET }}
