--- a/.github/workflows/skaffold-build.yml
+++ b/.github/workflows/skaffold-build.yml
@@ -16,6 +16,10 @@ on:
         required: true
       releases-repo-push-token:
         required: true
+      cicd-webhook-url:
+        required: true
+      cicd-webhook-secret:
+        required: true
 
 jobs:
   pipeline:
@@ -85,5 +89,5 @@ jobs:
       uses: distributhor/workflow-webhook@v3
       with:
         webhook_type: 'json-extended'
-        webhook_url: ${{ secrets.CICD_WEBHOOK_URL }}
-        webhook_secret: ${{ secrets.CICD_WEBHOOK_SECRET }}
+        webhook_url: ${{ secrets.cicd-webhook-url}}
+        webhook_secret: ${{ secrets.cicd-webhook-secret }}
