--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -6,6 +6,9 @@ on:
       go-version:
         required: true
         type: string
+      golangci-lint-version:
+        default: 1.62.2
+        type: string
 
 permissions:
   contents: read
@@ -26,7 +29,7 @@ jobs:
           # Require: The version of golangci-lint to use.
           # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
           # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
-          version: v1.54
+          version: ${{ inputs.golangci-lint-version }}
 
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
